# blockchain-postgres-sync

./: .eslintrc  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.yml  diesel.toml  entrypoint.sh  package-lock.json  package.json  pm2.template.json  schema.sql
data-service-consumer-rs/: Cargo.toml  Dockerfile  data_service.prod.scheme.sql  rust-toolchain
data-service-consumer-rs/migrations/2022-04-27-111623_initial/: down.sql  up.sql
data-service-consumer-rs/migrations/2022-06-09-114733_drop_blocks_fix_cons/: down.sql  up.sql
data-service-consumer-rs/migrations/2022-07-05-063145_ethereum/: down.sql  up.sql
data-service-consumer-rs/migrations/2022-09-12-111623_more-idx/: up.sql
data-service-consumer-rs/migrations/2023-03-07-134431_fix_tickers/: down.sql  up.sql
data-service-consumer-rs/src/lib/: db.rs  error.rs  lib.rs  models.rs  schema.rs  tuple_len.rs  utils.rs  waves.rs
data-service-consumer-rs/src/lib/config/: consumer.rs  mod.rs  node.rs  postgres.rs  rollback.rs
data-service-consumer-rs/src/lib/consumer/: function_call.rs  mod.rs  updates.rs
data-service-consumer-rs/src/lib/consumer/models/: asset_tickers.rs  assets.rs  block_microblock.rs  candles.rs  mod.rs  pairs.rs  tickers.rs  txs.rs  waves_data.rs
data-service-consumer-rs/src/lib/consumer/models/txs/: convert.rs  mod.rs
data-service-consumer-rs/src/lib/consumer/repo/: mod.rs  pg.rs
data-service-consumer-rs/src/lib/db/: mod.rs
migrations/: 20190917130306_initial_schema.js  20190927171802_txs_scripts_indexing.js  20191018100006_issue_txs_indexing.js  20191018100131_all_txs_sender_timestamp_id_idx.js  20191018100457_waves_issuance.js  20191025180310_fix_waves_issuance.js  20191102212107_fix_waves_data.js  20191112121951_fix_scripts_indexing.js  20191116014708_fix_waves_issuance.js  20191210120000_initial_schema.js  20200114122934_fix_candles.js  20200122192306_fix_candles_table.js  20200221103551_fix_waves_data_ordering.js  20200728183719_add-update-asset-info-txs.js  20200728210521_set-data-entry-type-nullable.js  20200729164613_allow-invoke-script-tx-arg-list-typed.js  20200729183041_add-transaction-status.js  20201126000000_normalization.js  20210608134653_add-invoke-script-txs-fee-asset-id-field.js
migrations/2022-04-27-111623_initial/: down.sql  up.sql
migrations/2023-03-07-134431_fix_tickers/: up.sql
migrations/2023-03-22-074844_fix_tickers_view/: up.sql
migrations/2023-03-22-174844_fix_tickers_ord/: down.sql  up.sql
migrations/2023-04-03-071850_calculate_candles/: down.sql  up.sql
migrations/2023-04-03-071851_calculate_candles/: down.sql  up.sql
migrations/2023-04-03-071852_calculate_candles/: down.sql  up.sql
migrations/2023-04-03-071853_calculate_candles/: down.sql  up.sql
migrations/2025-08-28-080719_added_func__get_decimals_or_warn/: down.sql  up.sql
migrations/sql/: initial_schema.down.sql
migrations/sql/20190917130306_initial_schema/: up.sql
migrations/sql/20190927171802_txs_scripts_indexing/: down.sql  up.sql
migrations/sql/20191018100006_issue_txs_indexing/: down.sql  up.sql
migrations/sql/20191018100131_all_txs_sender_timestamp_id_idx/: down.sql  up.sql
migrations/sql/20191018100457_waves_issuance/: down.sql  up.sql
migrations/sql/20191025180310_fix_waves_issuance/: down.sql  up.sql
migrations/sql/20191102212107_fix_waves_data/: down.sql  up.sql
migrations/sql/20191112121951_fix_scripts_indexing/: down.sql  up.sql
migrations/sql/20191116014708_fix_waves_issuance/: up.sql
migrations/sql/20191210120000_initial_schema/: down.sql  up.sql
migrations/sql/20200114122934_fix_candles/: down.sql  up.sql
migrations/sql/20200122192306_fix_candles_table/: down.sql  up.sql
migrations/sql/20200221103551_fix_waves_data_ordering/: down.sql  up.sql
migrations/sql/20200728183719_add-update-asset-info-txs/: down.sql  up.sql
migrations/sql/20200728210521_set-data-entry-type-nullable/: down.sql  up.sql
sql/: helpers.sql
sql/constraints/: txs_11_transfers.sql  txs_7_orders.sql  txs_all_blocks.sql
sql/indices/: asset_id.sql  height.sql  orders.sql
sql/procedures/: blocks.sql  insert_all.sql  insert_orders.sql  insert_txs_1.sql  insert_txs_10.sql  insert_txs_11.sql  insert_txs_2.sql  insert_txs_3.sql  insert_txs_4.sql  insert_txs_5.sql  insert_txs_6.sql  insert_txs_7.sql  insert_txs_8.sql  insert_txs_9.sql
sql/tableCreate/: blocks.sql  orders.sql  tickers.sql  txs.sql  txs_1.sql  txs_10.sql  txs_11.sql  txs_11_transfers.sql  txs_2.sql  txs_3.sql  txs_4.sql  txs_5.sql  txs_6.sql  txs_7.sql  txs_8.sql  txs_9.sql
sql/triggers/: delete_orphan_orders_trigger.sql  triggers.sql
sql/views/: assets.sql
src/: reinsertBlocks.js  rollbackMonitor.js  run.js  runForRange.js  update.js  updateComposite.js
src/api/: constants.js  requestBlocksBatch.js  requestHeight.js
src/autorun/: getOptionsEnv.js  index.js  logic.js  logic.test.js
src/db/: create.js  requestHeight.js  schema.js
src/lib/: db.rs  lib.rs  models.rs  schema.rs  utils.rs  waves.rs
src/lib/config/: consumer.rs  (+2 more)
src/updateComposite/: index.js  run.js
src/utils/: createRequestHeights.js  getOptions.js
(+17 files in other folders)
