[package]
name = "data-service-consumer"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.21"
bigdecimal = { version = "0.4", features = ["serde"] }
blake2 = "0.10"
bs58 = "0.5"
bytes = "1.1"
chrono = { version = "^0.4.27", features = ["serde"] }
deadpool-diesel = "0.5"
diesel = { version = "^2.1", default-features = false, features = ["chrono", "postgres", "r2d2", "32-column-tables", "serde_json", "numeric"] }
diesel_migrations = { version = "2", features = ["postgres"] }
envy = "0.4"
fragstrings = { git = "https://github.com/waves-exchange/fragstrings", tag = "v0.2.0", default-features = false, features = ["parse"] }
hex = "0.4.3"
itertools = "0.12"
lazy_static = "1.4"
percent-encoding = "2.1"
r2d2 = "0.8"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
sha3 = "0.10"
thiserror = "1.0"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.1" }
waves-protobuf-schemas = { git = "https://github.com/wavesplatform/protobuf-schemas", tag = "rust_v1.5.2" }

[lib]
name = "app_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"

[[bin]]
name = "migration"
path = "src/bin/migration.rs"
