[package]
name = "data-service-asset-consumer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
bigdecimal = { version = "0.1.2", features = ["serde"] }
blake2 = "0.9"
bs58 = "0.4.0"
bytes = "1.1"
cached = "0.26"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", default-features = false, features = ["chrono", "postgres", "r2d2", "32-column-tables", "serde_json", "numeric"] }
diesel-derive-enum = { version = "1.1.1", features = ["postgres"] }
diesel_migrations = { version = "1.4", features = ["postgres"] }
envy = "0.4"
futures = "0.3"
itertools = "0.10"
lazy_static = "1.4"
percent-encoding = "2.1"
prost = { version = "0.8", features = ["no-recursion-limit"] }
r2d2 = "0.8"
redis = { version = "0.21.3", features = ["tokio", "r2d2"] }
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
serde_qs = { version = "0.8", features = ["warp"] }
serde_repr = "0.1"
sha3 = "0.9"
thiserror = "1.0"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
tonic = "0.5"
validator = { version = "0.14", features = ["derive"] }
warp = { version = "0.3.2", default-features = false }
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.0" }
wavesexchange_warp = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_warp/0.12.3" }
diesel_full_text_search = "1.0.1"
waves-protobuf-schemas = { git = "https://github.com/wavesplatform/protobuf-schemas", tag = "v1.4.3" }
nom = "7.1.1"

[lib]
name = "app_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"

[[bin]]
name = "migration"
path = "src/bin/migration.rs"

[profile.release]
lto = true